--- a/playbook.yml
+++ b/playbook.yml
@@ -1,42 +1,25 @@
 ---
-- name: Set up frontend and backend services
+- name: Set up frontend and backend services on Alpine
   hosts: localhost
   become: true
   tasks:
-    - name: Update apt and install required packages
-      apt:
-        update_cache: yes
-        name: 
-          - nginx
-          - python3
-          - python3-pip
-        state: present
+    - name: Update apk and install required packages
+      ansible.builtin.command:
+        cmd: apk update && apk add nginx python3 py3-pip
+      ignore_errors: yes
 
     - name: Install Flask with pip
-      pip:
+      ansible.builtin.pip:
         name: Flask
+        executable: /root/venv/bin/pip
 
     - name: Copy frontend index.html to nginx web root
       copy:
         src: /root/index.html
-        dest: /var/www/html/index.html
-        owner: www-data
-        group: www-data
+        dest: /var/lib/nginx/html/index.html
+        owner: nginx
+        group: nginx
         mode: '0644'
 
-    - name: Configure nginx to serve index.html
-      lineinfile:
-        path: /etc/nginx/sites-available/default
-        regexp: 'root /var/www/html;'
-        line: 'root /var/www/html;'
-        backup: yes
-      notify: restart nginx
-
     - name: Start nginx service
-      service:
-        name: nginx
-        state: started
-        enabled: yes
-
-    - name: Start backend service
-      command: python3 /root/app.py &
+      ansible.builtin.command: nginx
